--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ img {
 }
 
 h1,
-h2 {
+h2, h3 {
     margin-top: 0;
     line-height: 1.3;
     margin-bottom: 2rem;
@@ -73,7 +73,7 @@ h2 {
 /* header */
 
 #header {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url('../images/header-banner.jpg') center/ cover no-repeat fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url('../images/header-img2.jpg') center/ cover no-repeat fixed;
     justify-content: flex-start;
     align-items: flex-end;
 }
@@ -83,7 +83,7 @@ h2 {
 }
 
 .header-content {
-    padding-bottom: .5rem;
+    padding-bottom: 4rem;
 }
 
 .header-content h1 {
@@ -92,3 +92,39 @@ h2 {
     text-transform: uppercase;
     color: var(--light-color);
 }
+
+.header-content h2 {
+    color: var(--light-color);
+    font-weight: 300;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin-top: 1.5rem;
+}
+
+.header-content h3 {
+    color: var(--light-color);
+    font-weight: 300;
+    letter-spacing: 4px;
+    margin-top: 1.5rem;
+}
+
+.social-links {
+    display: flex;
+    margin-top: 3.5rem;
+}
+
+.social-links li a {
+    width: 40px;
+    height: 40px;
+    background-color: var(--light-color);
+    margin-right: 1rem;
+    border-radius: .3rem;
+    box-shadow: 0 0 6px 5px rgba(0, 0, 0, 0.2);
+    transition: var(--transition);
+}
+
+.social-links li a:hover {
+    opacity: 0.5;
+}
+
+
